--- a/packages/docs/src/routes/docs/ctx/index.mdx
+++ b/packages/docs/src/routes/docs/ctx/index.mdx
@@ -2,7 +2,7 @@ import Navigation from '../../../components/widgets/Navigation'
 
 # ctx
 
-Esta funcion se encuentra dentro de `addAnswer` o `addAction`  
+Esta función se encuentra dentro de `addAnswer` o `addAction`  
 
 Se encarga de responder al usuario, puedes responder un texto o archivo adjunto.
 
@@ -32,7 +32,7 @@ Dentro del ctx puedes conseguir algunas de las siguientes propiedades
 
 ```
 
-Tambien recomiendao que con `console.log(ctx)` puedes ver todas las propiedades que vienen incluidas, muchas de ellas pueden ser propiedades propias del `provider`
+También recomiendo que con `console.log(ctx)` puedes ver todas las propiedades que vienen incluidas, muchas de ellas pueden ser propiedades propias del `provider`
 
 
 ---
