docs(provider-baileys): :memo: using the pairing code option

--- a/packages/docs/src/routes/docs/provider-baileys/index.mdx
+++ b/packages/docs/src/routes/docs/provider-baileys/index.mdx
@@ -29,7 +29,7 @@ const adapterProvider = createProvider(BaileysProvider, {
         phoneNumber: process.env.PHONE_NUMBER
     });
 ```
----
+---using the pairing code option
 
 ## Funciones usando el proveedor Baileys
 
