docs: (✏️) Añadiendo postgresql
Documentación para importar el adapter de postgresql

--- a/packages/docs/src/routes/docs/essential/index.mdx
+++ b/packages/docs/src/routes/docs/essential/index.mdx
@@ -92,6 +92,8 @@ Los conectores disponibles hasta el momento son los siguientes:
 
 `require('@bot-whatsapp/database/json')`
 
+`require('@bot-whatsapp/database/postgres')`
+
 ---
 
 <Navigation
