extensions object fix

--- a/packages/docs/src/routes/docs/blacklist/index.mdx
+++ b/packages/docs/src/routes/docs/blacklist/index.mdx
@@ -13,9 +13,10 @@ createBot({
     flow: adapterFlow,
     provider: adapterProvider,
     database: adapterDB,
-},{
-    blackList:['34XXXXXXXX']
-})
+    extensions: {
+      blackList:['3XXXXXXXXX'],
+    },
+  })
 ```
 
 ## Propiedades
