Update index.mdxnpm create bot-whatsapp@latest

--- a/packages/docs/src/routes/docs/requirements/index.mdx
+++ b/packages/docs/src/routes/docs/requirements/index.mdx
@@ -1,4 +1,4 @@
-import Navigation from '../../../components/widgets/Navigation'
+npm create bot-whatsapp@latestimport Navigation from '../../../components/widgets/Navigation'
 
 # Requerimientos
 
